# snips

./: .gitignore  README.md  requirements.txt  runme.sh  venv.sh
config/: myservices.sh  startdocker.sh  stopaudio
fancontrol/: fancontrol.py
hotword/beep/: beep.py
hotword/snowboy/: demo_snips.py  snipsbridge.py  snowboydecoder_snips.py
hotword/snowboy/resources/: computer.pmdl  jarvis.umdl
python/: display_messages.py  jokes.py
skills/SuperSonic/: .cproject  .project  CMakeLists.txt
skills/SuperSonic/src/: Mosquitto.cpp  Mosquitto.h  RCSwitch.h  SuperSonic.cpp  TcpServer.cpp  TcpServer.h
skills/SuperSonic/src/device/: Device.cpp  Device.h  RFDevice.cpp  RFDevice.h  WOLDevice.cpp  WOLDevice.h
skills/SuperSonic/src/sensors/: DHT11Sensor.cpp  DHT11Sensor.h  UltraSonicSensor.cpp  UltraSonicSensor.h  UltraSonicSensorArray.cpp  UltraSonicSensorArray.h
skills/cam/: cam-skill.py
skills/joke/: joke-skill.py  jokes.py  yomomma.txt
skills/shutup/: requirements.txt  shutup-skill.py
skills/signal/: config.ini.sample  echobot.py  send_message.py  signal-skill.py
skills/switch/: switch-skill.py
skills/tv/: tv-skill.py
skills/whatsapp/: confirm.sh  layer.py  register.sh  skill-whatsapp.py  stack.py
tts/: picotts-skill.py
